--- a/index.html
+++ b/index.html
@@ -43,16 +43,17 @@
     }
 
     .notice {
-      background: #fffbe6;
-      border: 1px solid #ffec99;
-      padding: 10px 15px;
-      border-radius: 5px;
+      background: #fff3cd;
+      border: 1px solid #ffecb5;
+      padding: 12px 16px;
+      border-radius: 6px;
       margin-bottom: 20px;
-      font-size: 0.95rem;
+      font-size: 1rem;
+      font-weight: 600;
     }
 
     #ack-section {
-      display: none; /* shown only after video completes */
+      display: none; /* shows only after video completes */
       margin-top: 20px;
       padding: 15px;
       border: 1px solid #ddd;
@@ -68,7 +69,8 @@
     }
 
     .ack-row input[type="checkbox"] {
-      margin-top: 3px;
+      margin-top: 4px;
+      transform: scale(1.2);
     }
 
     #continue-btn {
@@ -92,20 +94,51 @@
       color: #666;
       margin-top: 8px;
     }
+
+    .lang-switcher {
+      display: flex;
+      justify-content: flex-end;
+      gap: 8px;
+      margin-bottom: 10px;
+    }
+
+    .lang-btn {
+      padding: 6px 12px;
+      font-size: 0.9rem;
+      border-radius: 4px;
+      border: 1px solid #999;
+      background: #f0f0f0;
+      cursor: pointer;
+      font-weight: 600;
+    }
+
+    .lang-btn.active {
+      background: #007bff;
+      color: #fff;
+      border-color: #007bff;
+    }
   </style>
 </head>
 <body>
-  <h1>Pre-Employment Training</h1>
+  <!-- Language toggle -->
+  <div class="lang-switcher">
+    <button class="lang-btn active" data-lang="en">English</button>
+    <button class="lang-btn" data-lang="es">Español</button>
+  </div>
 
-  <p class="intro">
+  <h1 id="page-title">Pre-Employment Training</h1>
+
+  <p class="intro" id="intro-text">
     Welcome to your pre-employment training. Before you can complete and sign your training
-    form, you are required to watch the full training video below and confirm that you have
-    understood the material.
+    form, you must watch the full training video below and confirm that you understand the
+    material.
   </p>
 
   <div class="notice">
-    <strong>Important:</strong> The acknowledgment and “Continue to Training Form” button
-    will only appear after the video finishes playing.
+    <span id="notice-heading">IMPORTANT:</span>
+    <span id="notice-body">
+      You must watch this training video in full before you will be allowed to continue to the application.
+    </span>
   </div>
 
   <!-- YouTube video -->
@@ -113,12 +146,13 @@
     <div id="player"></div>
   </div>
 
-  <!-- Section shown only after video is fully watched -->
+  <!-- Section shown only after video fully watched -->
   <div id="ack-section">
-    <h2>Training Acknowledgment</h2>
+    <h2 id="ack-heading">Training Acknowledgment</h2>
+
     <div class="ack-row">
       <input type="checkbox" id="ack-checkbox" />
-      <label for="ack-checkbox">
+      <label for="ack-checkbox" id="ack-label">
         I confirm that I have watched the entire training video and understand the information
         presented. I acknowledge that this training is a condition of starting work.
       </label>
@@ -128,63 +162,122 @@
       Continue to Training Form
     </button>
 
-    <p class="small-note">
+    <p class="small-note" id="small-note">
       By clicking “Continue to Training Form,” you will be redirected to the training
       documentation that you must review and sign.
     </p>
   </div>
 
-  <!-- Load YouTube IFrame API -->
+  <!-- YouTube API -->
   <script src="https://www.youtube.com/iframe_api"></script>
 
   <script>
     var player;
     var videoFinished = false;
 
-    // 1) Create the YouTube player once API is ready
+    const translations = {
+      en: {
+        htmlLang: "en",
+        titleTag: "Pre-Employment Training",
+        pageTitle: "Pre-Employment Training",
+        introText:
+          "Welcome to your pre-employment training. Before you can complete and sign your training form, you must watch the full training video below and confirm that you understand the material.",
+        noticeHeading: "IMPORTANT:",
+        noticeBody:
+          "You must watch this training video in full before you will be allowed to continue to the application.",
+        ackHeading: "Training Acknowledgment",
+        ackLabel:
+          "I confirm that I have watched the entire training video and understand the information presented. I acknowledge that this training is a condition of starting work.",
+        continueBtn: "Continue to Training Form",
+        smallNote:
+          "By clicking “Continue to Training Form,” you will be redirected to the training documentation that you must review and sign."
+      },
+      es: {
+        htmlLang: "es",
+        titleTag: "Capacitación Previa al Empleo",
+        pageTitle: "Capacitación Previa al Empleo",
+        introText:
+          "Bienvenido a su capacitación previa al empleo. Antes de poder completar y firmar su formulario de capacitación, debe ver el video completo a continuación y confirmar que comprende el material.",
+        noticeHeading: "IMPORTANTE:",
+        noticeBody:
+          "Debe ver este video de capacitación completo antes de que se le permita continuar con la solicitud.",
+        ackHeading: "Reconocimiento de Capacitación",
+        ackLabel:
+          "Confirmo que he visto el video de capacitación completo y entiendo la información presentada. Reconozco que esta capacitación es una condición para comenzar a trabajar.",
+        continueBtn: "Continuar al Formulario de Capacitación",
+        smallNote:
+          "Al hacer clic en «Continuar al Formulario de Capacitación», será redirigido a la documentación que debe revisar y firmar."
+      }
+    };
+
+    function setLanguage(lang) {
+      const t = translations[lang];
+
+      document.documentElement.lang = t.htmlLang;
+      document.title = t.titleTag;
+
+      document.getElementById("page-title").textContent = t.pageTitle;
+      document.getElementById("intro-text").textContent = t.introText;
+      document.getElementById("notice-heading").textContent = t.noticeHeading;
+      document.getElementById("notice-body").textContent = " " + t.noticeBody;
+      document.getElementById("ack-heading").textContent = t.ackHeading;
+      document.getElementById("ack-label").textContent = t.ackLabel;
+      document.getElementById("continue-btn").textContent = t.continueBtn;
+      document.getElementById("small-note").textContent = t.smallNote;
+
+      document.querySelectorAll(".lang-btn").forEach((btn) => {
+        btn.classList.toggle("active", btn.dataset.lang === lang);
+      });
+    }
+
+    // YouTube player
     function onYouTubeIframeAPIReady() {
-      player = new YT.Player('player', {
-        videoId: 'fGFDnc4VP18', // Your actual YouTube video ID
+      player = new YT.Player("player", {
+        videoId: "fGFDnc4VP18",
         playerVars: {
           rel: 0,
           modestbranding: 1
         },
         events: {
-          'onStateChange': onPlayerStateChange
+          onStateChange: onPlayerStateChange
         }
       });
     }
 
-    // 2) Detect when the video has finished
     function onPlayerStateChange(event) {
       if (event.data === YT.PlayerState.ENDED) {
         videoFinished = true;
-        // Show the acknowledgment section
-        document.getElementById('ack-section').style.display = 'block';
-        // Scroll down to it, for convenience
-        document.getElementById('ack-section').scrollIntoView({ behavior: 'smooth' });
+        document.getElementById("ack-section").style.display = "block";
+        document.getElementById("ack-section").scrollIntoView({ behavior: "smooth" });
       }
     }
 
-    // 3) Enable button only when checkbox is checked AND video finished
-    document.addEventListener('DOMContentLoaded', function () {
-      var ackCheckbox = document.getElementById('ack-checkbox');
-      var continueBtn = document.getElementById('continue-btn');
+    document.addEventListener("DOMContentLoaded", function () {
+      const ackCheckbox = document.getElementById("ack-checkbox");
+      const continueBtn = document.getElementById("continue-btn");
 
-      ackCheckbox.addEventListener('change', function () {
+      // Default language
+      setLanguage("en");
+
+      // Language toggle logic
+      document.querySelectorAll(".lang-btn").forEach((btn) => {
+        btn.addEventListener("click", () => setLanguage(btn.dataset.lang));
+      });
+
+      ackCheckbox.addEventListener("change", function () {
         if (ackCheckbox.checked && videoFinished) {
           continueBtn.disabled = false;
-          continueBtn.classList.add('enabled');
+          continueBtn.classList.add("enabled");
         } else {
           continueBtn.disabled = true;
-          continueBtn.classList.remove('enabled');
+          continueBtn.classList.remove("enabled");
         }
       });
 
-      // 4) Redirect to Adobe Sign web form on click
-      continueBtn.addEventListener('click', function () {
+      continueBtn.addEventListener("click", function () {
         if (!continueBtn.disabled) {
-          window.location.href = 'https://na2.documents.adobe.com/public/esignWidget?wid=CBFCIBAA3AAABLblqZhBaK_l5Wopm430r1HwIRPnxP8nj-zbKyAsAoqj19EPGbQ6qXlgWD1IspW25_ypXqgI*';
+          window.location.href =
+            "https://na2.documents.adobe.com/public/esignWidget?wid=CBFCIBAA3AAABLblqZhBaK_l5Wopm430r1HwIRPnxP8nj-zbKyAsAoqj19EPGbQ6qXlgWD1IspW25_ypXqgI*";
         }
       });
     });
